<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>net.tascalate.javaflow</groupId>
		<artifactId>net.tascalate.javaflow.parent</artifactId>
		<version>2.5.0-SNAPSHOT</version>
		<relativePath>../</relativePath>
	</parent>

	<artifactId>net.tascalate.javaflow.providers.asmx</artifactId>
	<packaging>jar</packaging>

	<name>Tascalate JavaFlow / Bytecode Enhancers / ASM-X</name>

	<properties>
		<license.header>../HEADER-DERRIVED.txt</license.header>
	</properties>

	<dependencies>
		<dependency>
			<groupId>net.tascalate.javaflow</groupId>
			<artifactId>net.tascalate.javaflow.spi</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-analysis</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.moditect</groupId>
				<artifactId>moditect-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>add-module-infos</id>
						<phase>package</phase>
						<goals>
							<goal>add-module-info</goal>
						</goals>
						<configuration>
							<jvmVersion>9</jvmVersion>
							<module>
								<moduleInfoSource>
								module net.tascalate.javaflow.providers.asmx {
								    requires transitive org.objectweb.asm;
								    requires transitive org.objectweb.asm.tree;
								    requires transitive org.objectweb.asm.tree.analysis;

								    requires transitive net.tascalate.javaflow.spi;

								    exports org.apache.commons.javaflow.providers.asmx;
								}
								</moduleInfoSource>
							</module>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
